deployment/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hapi-uploader-demo
  namespace: oss
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hapi-uploader-demo
    spec:
      containers:
      - name: hapi-uploader-demo
        image: theremix/hapi-uploader-demo:latest
        ports:
        - containerPort: 3000
