deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hapi-uploader-demo
  namespace: oss
spec:
  selector:
    app: hapi-uploader-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
