deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hapi-uploader-demo
  namespace: oss
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - hapi-uploader-demo.gomagames.com
    secretName: app-tls
  rules:
  - host: hapi-uploader-demo.gomagames.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: hapi-uploader-demo
          servicePort: 80
